@@ -1,54 +1,0 @@
-'\" t
-.TH PURGE.SH 8 "14 Mar 2006" "@PACKAGE_VERSION@" "@PACKAGE_NAME@ utils"
-
-.SH NAME
-purge.sh \- delete an entire monthly backup directory 
-
-.SH SYNOPSIS
-.B purge.sh
-[
-.IR OPTIONS
-]
-HOST
-
-.SH DESCRIPTION
-\fBpurge.sh\fR deletes an entire monthly backup. It can be used to
-cleanup old backups (You know: the ones you have written to CD or DVD?).
-.PP
-The \fBHOST\fR argument speficies what backups are to be deleted.
-.PP
-If the \fI-i\fR option is given \fBpurge.sh\fR will ask whether to
-continue, otherwise it will \fBSILENTLY DELETE ALL YOUR FILES\fR.
-.PP
-Use this command with caution.
-
-.SH OPTIONS
-.TP 
-.B \-b backupdir
-Alternate backup directory. Defaults to `/vol/backup/$HOSTNAME`.
-.TP
-.B \-x num
-Delete the backup of \fBNUM\fR months ago. This defaults to 2.
-.TP
-.B \-y
-Don't ask whether to continue, but go ahead and delete the backups.
-.TP
-.B \-h
-Show a short help message.
-.TP
-.B \-V
-Show the version.
-
-.SH EXAMPLE
-If today would be the 14th of March 2006, the
-following command will delete `/vol/backup/elektron/200601':
-
-        purge -x2 -i elektron
-
-
-.SH FILES
-`/vol/backup/$HOSTNAME`, or the directory specified with \-b, root of
-the backup file system.
-
-.SH SEE ALSO
-hist.sh(1), yesterday.sh(1), rdup(8) and dump.sh(8).
